added 4 common shapes

--- a/uikit-2.27.4/index.html
+++ b/uikit-2.27.4/index.html
@@ -422,6 +422,43 @@
                                                                 <div class="shape"></div>
                                                             </div>
                                                         </div> 
+                                                        <div class="uk-width-large-1-6 uk-width-medium-1-4 uk-width-small-1-3 uk-margin-bottom">
+                                                            <div class="item sh8" data-number="8">
+                                                                <div class="shape"></div>
+                                                                <div class="shape"></div>
+                                                                <div class="shape"></div>
+                                                            </div>
+                                                        </div> 
+                                                        <div class="uk-width-large-1-6 uk-width-medium-1-4 uk-width-small-1-3 uk-margin-bottom">
+                                                            <div class="item sh9" data-number="9">
+                                                                <div class="shape"></div>
+                                                                <div class="sh-wrap">
+                                                                    <div class="shape"></div>
+                                                                    <div class="shape"></div>
+                                                                </div>
+                                                            </div>
+                                                        </div> 
+                                                        <div class="uk-width-large-1-6 uk-width-medium-1-4 uk-width-small-1-3 uk-margin-bottom">
+                                                            <div class="item sh10" data-number="10">
+                                                                <div class="shape"></div>
+                                                                <div class="sh-wrap">
+                                                                    <div class="shape"></div>
+                                                                    <div class="shape"></div>
+                                                                    <div class="shape"></div>
+                                                                </div>
+                                                            </div>
+                                                        </div> 
+                                                        <div class="uk-width-large-1-6 uk-width-medium-1-4 uk-width-small-1-3 uk-margin-bottom">
+                                                            <div class="item sh11" data-number="11">
+                                                                <div class="shape"></div>
+                                                                <div class="sh-wrap">
+                                                                    <div class="shape"></div>
+                                                                    <div class="shape"></div>
+                                                                    <div class="shape"></div>
+                                                                    <div class="shape"></div>
+                                                                </div>
+                                                            </div>
+                                                        </div> 
                                                     </div>
                                                 </div>
                                                 <a class="uk-modal-close uk-close"></a>
