added 1 uncommon shape sin

--- a/uikit-2.27.4/index.html
+++ b/uikit-2.27.4/index.html
@@ -459,6 +459,15 @@
                                                                 </div>
                                                             </div>
                                                         </div> 
+                                                        <div class="uk-width-large-1-6 uk-width-medium-1-4 uk-width-small-1-3 uk-margin-bottom">
+                                                            <div class="item sh12" data-number="12">
+                                                                <div class="shape"></div>
+                                                                <div class="shape"></div>
+                                                                <div class="shape"></div>
+                                                                <div class="shape"></div>
+                                                                <div class="shape"></div>
+                                                            </div>
+                                                        </div> 
                                                     </div>
                                                 </div>
                                                 <a class="uk-modal-close uk-close"></a>
