--- a/uikit-2.27.4/index.html
+++ b/uikit-2.27.4/index.html
@@ -476,6 +476,27 @@
                                                                 <div class="shape"></div>
                                                             </div>
                                                         </div> 
+                                                        <div class="uk-width-large-1-6 uk-width-medium-1-4 uk-width-small-1-3 uk-margin-bottom">
+                                                            <div class="item sh14" data-number="14">
+                                                                <div class="shape"></div>
+                                                                <div class="shape"></div>
+                                                                <div class="shape"></div>
+                                                            </div>
+                                                        </div> 
+                                                        <div class="uk-width-large-1-6 uk-width-medium-1-4 uk-width-small-1-3 uk-margin-bottom">
+                                                            <div class="item sh15" data-number="15">
+                                                                <div class="shape"></div>
+                                                                <div class="shape"></div>
+                                                            </div>
+                                                        </div> 
+                                                        <div class="uk-width-large-1-6 uk-width-medium-1-4 uk-width-small-1-3 uk-margin-bottom">
+                                                            <div class="item sh16" data-number="16">
+                                                                <div class="shape"></div>
+                                                                <div class="shape"></div>
+                                                                <div class="shape"></div>
+                                                                <div class="shape"></div>
+                                                            </div>
+                                                        </div> 
                                                     </div>
                                                 </div>
                                                 <a class="uk-modal-close uk-close"></a>
