pixabay api + pagination done

--- a/uikit-2.27.4/index.html
+++ b/uikit-2.27.4/index.html
@@ -319,6 +319,7 @@
                                                         </div> -->
                                                     </div>
                                                 </div>
+                                                <div id="pagination-container"></div>
                                                 <a class="uk-modal-close uk-close"></a>
                                             </div>
                                         </div>
@@ -898,6 +899,7 @@
     <script src="js/core/jquery.base64.js"></script>
     <script src="js/core/range-slider-custom.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/pagination.min.js"></script>
     <!-- Script for range input End -->
     <!-- Script for working block Start -->
     <script>
