shatterstock api added

--- a/uikit-2.27.4/index.html
+++ b/uikit-2.27.4/index.html
@@ -262,8 +262,9 @@
                                     </div>
                                     <div class="tm-info uk-text-left">
                                         <i class="uk-icon-exclamation uk-icon-hover"></i>
-                                        <span>Если Вы не можете воспользоваться конструктором, то любую модель картины мы можем сформировать за вас</span><a href="#git" data-uk-smooth-scroll>Помогите мне</a>
+                                        <span>Если Вы не можете воспользоваться конструктором, то любую модель картины мы можем сформировать за вас</span>&nbsp;<a href="#git" data-uk-smooth-scroll>Помогите мне</a>
                                     </div>
+                                    <div class="tm-info uk-text-left js-pic-data"></div>
                                 </div>
                             </div>
                             <!-- <img src="images/Canvas1.jpg" alt="canvas"> -->
