api finished, added rus cat

--- a/uikit-2.27.4/index.html
+++ b/uikit-2.27.4/index.html
@@ -299,10 +299,20 @@
                                                     </div>
                                                     <div class="uk-width-large-1-3 tm-modal-select">
                                                         <p>Категория изображения</p>
-                                                        <select>
-                                                            <option value="">Абстракция</option>
-                                                            <option value="">Абстракция1</option>
-                                                            <option value="">Абстракция2</option>
+                                                        <select class="js-cat-search" id="select-search">
+                                                            <option data-cat="Any">Все</option>
+                                                            <option data-cat="Abstract">Абстрактные изображения</option>
+                                                            <option data-cat="Vintage">Винтаж</option>
+                                                            <option data-cat="Food and Drink">Еда и напитки</option>
+                                                            <option data-cat="Animals/Wildlife">Животные/Дикая природа</option>
+                                                            <option data-cat="Buildings/Landmarks">Здания/Достопримечательности</option>
+                                                            <option data-cat="Art">Искусство</option>
+                                                            <option data-cat="Parks/Outdoor">Парки/Природа</option>
+                                                            <option data-cat="Objects">Предметы</option>
+                                                            <option data-cat="Nature">Природа</option>
+                                                            <option data-cat="Transportation">Транспорт</option>
+                                                            <option data-cat="Miscellaneous">Разное</option>
+                                                            <option data-cat="Sports/Recreation">Спорт/Отдых</option>
                                                         </select>
                                                     </div>
                                                     <div class="uk-width-large-1-3">
