draft to transparancy

--- a/uikit-2.27.4/index.html
+++ b/uikit-2.27.4/index.html
@@ -306,7 +306,7 @@
                                                             <option data-cat="Food and Drink">Еда и напитки</option>
                                                             <option data-cat="Animals/Wildlife">Животные/Дикая природа</option>
                                                             <option data-cat="Buildings/Landmarks">Здания/Достопримечательности</option>
-                                                            <option data-cat="Art">Искусство</option>
+                                                            <option data-cat="The Arts">Искусство</option>
                                                             <option data-cat="Parks/Outdoor">Парки/Природа</option>
                                                             <option data-cat="Objects">Предметы</option>
                                                             <option data-cat="Nature">Природа</option>
