sum to cart added

--- a/uikit-2.27.4/index.html
+++ b/uikit-2.27.4/index.html
@@ -107,7 +107,7 @@
                         </div>
                         <div class="uk-display-inline-block uk-vertical-align-middle tm-header-topbox-cart">
                             <a href="#">
-                                <span class="tm-header-topbox-cart-info">Сумма:<br><span class="tm-header-topbox-cart-price">6000 &#8381;</span></span>
+                                <span class="tm-header-topbox-cart-info">Сумма:<br><span class="tm-header-topbox-cart-price"><span class="js-total-sum">0</span> &#8381;</span></span>
                                 <i class="kot-icon kot-pricing-transactions-3"></i>
                             </a>
 
