poster dimentions are shown

--- a/uikit-2.27.4/index.html
+++ b/uikit-2.27.4/index.html
@@ -537,6 +537,10 @@
                                             <input class="js-dimen" type="range" min="50" max="320" step="5" value="100" data-buffer="0" data-rangeSlider/>
                                             <output class="tm-constructor-form-range-info"></output>
                                         </div>
+                                        <div class="tm-poster-dim">
+                                            <div class="tm-poster"><strong>Ширина постера:</strong>&nbsp;<span class="js-poster-width tm-output"></span>&nbsp;см</div>
+                                            <div class="tm-poster"><strong>Высота постера:</strong>&nbsp;<span class="js-poster-height tm-output"></span>&nbsp;см</div>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="uk-width-small-1-1 uk-width-medium-1-2 tm-custom">
